# bender-chef

./: .gitignore  README.md  plexchef.py  pyproject.toml  requirements.txt
src/benderchef/: bender_chef.py  benderchef.py
