[project]
name = "bender-chef"
version = "0.0.1"
description = "CLI tool to provide missing Plex functionality through the REST API"
authors = [{ name = "Carl Edman", email = "CarlEdman@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["plexapi (>=4.17.0,<5.0.0)", "click"]
license = "MIT"
keywords = ["plex", "plex-server", "plex-media-server", "plexmediaserver"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]

[project.urls]
repository = "https://github.com/CarlEdman/bender-chef"

[project.scripts]
benderchef = "benderchef.benderchef:main"

[tool.poetry]
packages = [{ include = "benderchef", from = "src" }]
package-mode = true

[tool.poetry.scripts]
benderchef = "benderchef.benderchef:main"

# [project.entry-points."poetry.application.plugin"]
# export = "poetry_plugin_export.plugins:ExportApplicationPlugin"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
